# NEWS_DASHBOARD

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: get_custom_data.py  linux_main.py  main.py  newsapi_fetcher.py  redis.py  scheduler.py  store_in_db.py  test.py
app/data_extraction/: line_graph_data.py  top_news.py  top_sources.py
app/db_logic/: db.py  db_test.py  models.py
app/models/: sentiment.py
app/redis_logic/: redis.py
app/scheduled/: delete_old_news.py  store_in_redis.py
